[package]
name = "panini"
version = "0.1.0"
edition = "2021"

[dependencies]
croner = "2.1.0"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "into"] }
jiff = { version = "0.2.2", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = "0.4.40"
